[package]
name = "swap_token_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_token_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# anyhow = "1.0.97"
# thiserror = "2"

const_format = { version = "0.2.34" }
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.5"

itertools = "0.14.0"
wait = "0.2.6"
# smol = "2.0.2" # unsupported btw

chrono = { version = "0.4.40", features = ["serde"] }
smallvec = { version = "1.15.1", features = ["arbitrary", "serde"] }
smol_str = { version = "0.3.2" }

anchor-lang = { version = "=0.31.0", features = ["idl-build"] }
anchor-spl = { version = "=0.31.0", features = ["idl-build"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }

# https://github.com/MeteoraAg/cpi-examples/blob/main/programs/cpi-example/src/instructions/dlmm_cpi/swap.rs
# none

# https://github.com/raydium-io/raydium-idl/blob/master/raydium_cpmm/raydium_cp_swap.json
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi" }
